[gd_scene load_steps=17 format=2]

[ext_resource path="res://Escenas/Seleccion de personaje.gd" type="Script" id=1]
[ext_resource path="res://Escenas/Parrallax principal.tscn" type="PackedScene" id=2]
[ext_resource path="res://Recursos/Font/DancingScript-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Recursos/Imagenes/boton normal.png" type="Texture" id=4]
[ext_resource path="res://Recursos/Imagenes/boton click.png" type="Texture" id=5]
[ext_resource path="res://Recursos/Imagenes/boton hover.png" type="Texture" id=6]
[ext_resource path="res://Recursos/Imagenes/conejo_rosa_brincar.png" type="Texture" id=7]
[ext_resource path="res://Escenas/Seleccion rosa.gd" type="Script" id=8]
[ext_resource path="res://Recursos/Imagenes/conejo_cafe_brincar.png" type="Texture" id=9]
[ext_resource path="res://Escenas/Seleccion cafe.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 45
outline_color = Color( 0.815686, 0.937255, 1, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 60.548
height = 17.5496

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 3 )

[node name="Seleccion de personaje" type="Control"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Parrallax principal" parent="." instance=ExtResource( 2 )]

[node name="Titulo de submenu" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Selecciona a tu cangurejo"
align = 1
valign = 1

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 37.0
margin_top = 764.0
margin_right = 297.0
margin_bottom = 854.0
rect_min_size = Vector2( 250, 90 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="TextureButton"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -80.5
margin_right = 80.5
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.27451, 0.52549, 0.733333, 1 )
text = "Regresar"
align = 1

[node name="ConejoRosa" type="TextureButton" parent="."]
margin_left = 195.0
margin_top = 137.0
margin_right = 316.0
margin_bottom = 353.0

[node name="Area2D2" type="Area2D" parent="ConejoRosa"]
editor/display_folded = true
position = Vector2( -198.242, -160.776 )
__meta__ = {
"_edit_group_": true
}

[node name="conejo_rosa_brincar" type="Sprite" parent="ConejoRosa/Area2D2"]
editor/display_folded = true
position = Vector2( 258.097, 269.113 )
texture = ExtResource( 7 )
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="ConejoRosa/Area2D2/conejo_rosa_brincar"]
anims/Seleccion = SubResource( 3 )
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConejoRosa/Area2D2"]
visible = false
position = Vector2( 257.941, 288.733 )
shape = SubResource( 4 )

[node name="ConejoCafe" type="TextureButton" parent="."]
margin_left = 188.0
margin_top = 494.0
margin_right = 310.0
margin_bottom = 703.0

[node name="Area2D" type="Area2D" parent="ConejoCafe"]
editor/display_folded = true
position = Vector2( -188, -494 )
__meta__ = {
"_edit_group_": true
}

[node name="conejo_cafe_brincar" type="Sprite" parent="ConejoCafe/Area2D"]
editor/display_folded = true
position = Vector2( 248.577, 593.18 )
texture = ExtResource( 9 )
hframes = 3
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="ConejoCafe/Area2D/conejo_cafe_brincar"]
anims/Eleccion = SubResource( 5 )
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConejoCafe/Area2D"]
visible = false
position = Vector2( 248.577, 622.414 )
shape = SubResource( 4 )

[node name="JugadorSeleccionado" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -53.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
valign = 1
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="ConejoRosa" to="." method="_on_ConejoRosa_pressed"]
[connection signal="pressed" from="ConejoCafe" to="." method="_on_ConejoCafe_pressed"]
